--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="materialize/css/materialize.min.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="grey lighten-4" style="background: linear-gradient(to bottom, #F5F5DC, #FFFFFF); min-height: 100vh; margin: 0;">
+<body class="grey lighten-4" style="background: linear-gradient(to bottom, #1a237e, #64b5f6); min-height: 100vh; margin: 0;">
 
     <login-loader></login-loader>
     <register-form></register-form>
