--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Perfil de Usuario</title>
+
+    <!-- Materialize CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+
+    <!-- Estilo personalizado -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body style="background: linear-gradient(to bottom, #1a237e, #64b5f6); min-height: 100vh;">
@@ -26,5 +31,9 @@
             }
         });
     </script>
+
+    <!-- Materialize JS (opcional pero útil si usas sus componentes) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
+
