--- a/profile.html
+++ b/profile.html
@@ -1,39 +1,24 @@
+<!-- pages/profile.html -->
+
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Perfil de Usuario</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Perfil</title>
+    <link rel="stylesheet" href="../../css/style.css" />
+    <script type="module" src="../../javascript/profile/profile.js"></script>
+  </head>
+  <body>
+    <nav-bar></nav-bar>
 
-    <!-- Materialize CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-
-    <!-- Estilo personalizado -->
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body style="background: linear-gradient(to bottom, #1a237e, #64b5f6); min-height: 100vh;">
-    <my-navbar></my-navbar>
-    <user-profile></user-profile>
-    <my-footer></my-footer>
-
-    <!-- Componentes Web -->
-    <script type="module" src="components/navbar.js"></script>
-    <script type="module" src="components/user-profile.js"></script>
-
-    <!-- Script para manejar clic en botón de perfil -->
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const btnPerfil = document.getElementById("btn-perfil");
-            if (btnPerfil) {
-                btnPerfil.addEventListener("click", (e) => {
-                    e.preventDefault();
-                    window.location.href = "profile.html";
-                });
-            }
-        });
-    </script>
-
-    <!-- Materialize JS (opcional pero útil si usas sus componentes) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+    <main>
+      <h1>Mi perfil</h1>
+      <div>
+        <p><strong>Nombre:</strong> <span id="user-name"></span></p>
+        <p><strong>Email:</strong> <span id="user-email"></span></p>
+        <img id="profile-picture" src="" alt="Foto de perfil" width="150" />
+      </div>
+    </main>
+  </body>
 </html>
 
