--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script type="module" src="components/image-uploader.js"></script>
     <script type="module" src="components/user-greeting.js"></script>
     <script type="module" src="components/spinner-loader.js"></script>
-    <script type="module" src="components/image-galley.js"></script>
+    <script type="module" src="components/image-gallery.js"></script>
     <script type="module" src="components/footer.js"></script>
 
     <script src="materialize/js/materialize.min.js"></script>
