--- a/mygallery.html
+++ b/mygallery.html
@@ -9,11 +9,13 @@
 </head>
 <body style="background: linear-gradient(to bottom, #1a237e, #64b5f6); min-height: 100vh;">
     <my-navbar></my-navbar>
-    <!-- Aquí puedes poner tu componente de galería de imágenes -->
-    <image-gallery></image-gallery>
+    <div class="container">
+        <h4 class="center-align white-text" style="margin-top:24px;">Mi galería</h4>
+        <image-gallery></image-gallery>
+    </div>
     <my-footer></my-footer>
     <script type="module" src="components/navbar.js"></script>
-    <script type="module" src="components/image-gallery.js"></script>
+    <script type="module" src="components/image-gallery.js"></script> <!-- Asegúrate que el nombre coincide -->
     <script type="module" src="components/footer.js"></script>
     <script src="materialize/js/materialize.min.js"></script>
 </body>
