--- a/index.html
+++ b/index.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="icon" href="Icono.ico" type="image/icon">
+    <title>Galería General</title>
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="materialize/css/materialize.min.css">
-    <link rel="stylesheet" href="styles/style.css">
 </head>
-<body class="grey lighten-4">
-    <!-- Navbar -->
+<body style="background: linear-gradient(to bottom, #1a237e, #64b5f6); min-height: 100vh;">
     <my-navbar></my-navbar>
-
-    <!-- Boton flotante para cargar archivo -->
-    <image-uploader></image-uploader>
-
-    <!-- Muestra de informacion -->
     <div class="container">
-        <div class="section">
-            <!-- Saludo de usuario -->
-            <user-greeting></user-greeting>
-
-            <!-- Loader de cada una de las imágenes -->
-            <spinner-loader></spinner-loader>
-
-            <!-- Galería de imágenes -->
-            <image-gallery></image-gallery>
-        </div>
+        <h4 class="center-align white-text" style="margin-top:24px;">Galería General</h4>
+        <image-gallery></image-gallery>
     </div>
-
     <my-footer></my-footer>
-
     <script type="module" src="components/navbar.js"></script>
-    <script type="module" src="components/image-uploader.js"></script>
-    <script type="module" src="components/user-greeting.js"></script>
-    <script type="module" src="components/spinner-loader.js"></script>
     <script type="module" src="components/image-gallery.js"></script>
     <script type="module" src="components/footer.js"></script>
-
     <script src="materialize/js/materialize.min.js"></script>
-    <script type="module" src="javascript/home/main.js"></script>
-    <script src="javascript/auth/logout.js"></script>
 </body>
 </html>
