--- a/mygallery.html
+++ b/mygallery.html
@@ -11,11 +11,11 @@
     <my-navbar></my-navbar>
     <div class="container">
         <h4 class="center-align white-text" style="margin-top:24px;">Mi galería</h4>
-        <image-gallery></image-gallery>
+        <image-gallery only-mine="true"></image-gallery>
     </div>
     <my-footer></my-footer>
     <script type="module" src="components/navbar.js"></script>
-    <script type="module" src="components/image-gallery.js"></script> <!-- Asegúrate que el nombre coincide -->
+    <script type="module" src="components/image-gallery.js"></script>
     <script type="module" src="components/footer.js"></script>
     <script src="materialize/js/materialize.min.js"></script>
 </body>
